--- a/rct2/station/rct2.station.snow.json
+++ b/rct2/station/rct2.station.snow.json
@@ -15,9 +15,14 @@
     "strings": {
         "name": {
             "en-GB": "Snow / Ice",
+            "it-IT": "Neve / Ghiaccio",
             "nl-NL": "Sneeuw / IJs",
             "ko-KR": "눈 / 얼음",
-            "zh-CN": "雪 / 冰"
+            "zh-CN": "雪 / 冰",
+            "ar-EG": "ثلج / جليد",
+            "nb-NO": "Snø / is",
+            "hu-HU": "Havas / jeges",
+            "es-ES": "Nieve / Hielo"
         }
     }
 }
